--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "peerDependencies": {
     "typescript": "^5.7.3"
   },
+  "scripts": {
+    "dev": "tsx watch --env-file=.env src/index.ts"
+  },
   "dependencies": {
     "@hono/node-server": "^1.19.7",
     "@hono/zod-openapi": "^1.2.0",
