--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/index.ts"
+    "dev": "tsx watch --env-file=.env src/index.ts",
+    "test": "vitest run --reporter=verbose",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.7",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@types/pg": "^8.16.0",
     "drizzle-kit": "^0.31.8",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "vitest": "^3.2.3"
   }
 }
